--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -76,6 +76,13 @@
         </div>
         <div class="col-md-6">
             <!-- maribel 21/07 tabla2 inversion -->
+			<form method="post" id="anyofiscal_form" role="form" novalidate class="pull-right">
+			    {% csrf_token %}                  
+			    <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
+			      <span class="glyphicon glyphicon-download-alt"></span>
+			      <span class="text">Excel</span>
+			    </button>
+			</form>            
             <h3>Eficiencia en la ejecución del gasto municipal</h3>
             <h4>Gastos en millones de córdobas corrientes</h4>
             <table class="table table-condensed">                                       
