--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -77,7 +77,8 @@
         <div class="col-md-6">
             <!-- maribel 21/07 tabla2 inversion -->
 			<form method="post" id="anyofiscal_form" role="form" novalidate class="pull-right">
-			    {% csrf_token %}                  
+			    {% csrf_token %}
+			    <input type="hidden" name="reporte" value="ogm"></button>
 			    <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
 			      <span class="glyphicon glyphicon-download-alt"></span>
 			      <span class="text">Excel</span>
@@ -112,6 +113,14 @@
         <div class="col-md-12">
             <!--maribel: personal permanente ogm-tabla3 -->
             <div class="col-md-7">
+			<form method="post" id="anyofiscal_form" role="form" novalidate class="pull-right">
+			    {% csrf_token %}
+			    <input type="hidden" name="reporte" value="ogm2"></button>			                      
+			    <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
+			      <span class="glyphicon glyphicon-download-alt"></span>
+			      <span class="text">Excel</span>
+			    </button>
+			</form>             
                 <h3>Eficiencia en la ejecución del gasto de personal permanente</h3>
                 <h4>Gastos en millones de córdobas corrientes</h3>
                 <table class="table table-condensed">                                       
@@ -139,6 +148,14 @@
             <!-- maribel 06/07 gftabla4 nacional -->
             {% if not municipio %}
                 <div class="col-md-5">
+			<form method="post" id="anyofiscal_form" role="form" novalidate class="pull-right">
+			    {% csrf_token %}
+			    <input type="hidden" name="reporte" value="ogm3"></button>			                      
+			    <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
+			      <span class="glyphicon glyphicon-download-alt"></span>
+			      <span class="text">Excel</span>
+			    </button>
+			</form>                  
                 <h3>Gastos de personal por habitante en cada categoría municipal</h3>
                 <h4 class="text-info">Córdobas Corrientes</h4>
                 <table class="table table-condensed">
@@ -207,6 +224,14 @@
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimmodificacion" aria-labelledby="oimmodificacion-tab">
         <!-- maribel 20/07 ogm-tabla5 -->
+			<form method="post" id="anyofiscal_form" role="form" novalidate class="pull-right">
+			    {% csrf_token %}
+			    <input type="hidden" name="reporte" value="ogm4"></button>			                      
+			    <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
+			      <span class="glyphicon glyphicon-download-alt"></span>
+			      <span class="text">Excel</span>
+			    </button>
+			</form>         
         <h3>Modificaciones al presupuesto municipal de gastos</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
