Cambiando nombre de seccion de gastos a destinos de gastos

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -66,7 +66,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTOS <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</a></li>
-                   <li><a href="{%url 'origen_gastos'%}">Origen de gastos del municipio</a></li>
+                   <li><a href="{%url 'origen_gastos'%}">Destino del gasto municipal</a></li>
                     <li class="divider"></li>
                     <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
                     <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
