--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -189,9 +189,9 @@
             <!-- /fin ogm-tabla4 nacional-->
             <!-- maribel 20/07 ogm-tabla4-municipal -->
             {% if municipio %}
-                <div class="col-md-5">
+                <div class="col-md-6">
                 <h3>Ranquin de municipio de misma categoría municipal</h3>
-                <h4 class="text-info">Millones de córdobas corrientes por habitante</h4>
+                <h4 class="text-info">Córdobas corrientes por habitante</h4>
                 <table class="table table-condensed">
                     <tr class="info"><th>Posición</th><th>Municipios</th> <th>P. Inicial</th> <th>Ejecución</th></tr>
                     {% for row in otros %}
@@ -313,7 +313,17 @@
         <!--maribel 20/07 ogm-tabla 7 -->
         <div class="col-md-6">
             <h3>Ejecución presupuestaria del gasto sector municipal</h3>
-            <h4 class="text-info">Millones de córdobas corrientes</h4>
+            <h4 class="text-info">Millones de córdobas corrientes
+                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsecomparativo_anios"  aria-expanded="false" aria-controls="collapsePastel">Ver gráfico</a>
+            </h4>
+            <div class="collapse" id="collapsecomparativo_anios">               
+                <div class="well">                                              
+                    <h4>Gastos del municipio {% if municipio %}comparado con la categoría{% endif %}</h4> 
+                    {% if municipio %}<h5>Municipio de {{ municipio}} y Categoría del Municipio {{ year }}</h5>{% endif %}
+                    <h5 class="text-info">Millones de córdobas corrientes</h5>
+                    <div id='comparativo_anios' class="col-md-7"> Chart will be rendered here </div>
+                </div>                                           
+            </div> 
             <table class="table table-condensed">
                 <tr class="info"><th>Años</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
                 {% for row in anuales %}
@@ -365,17 +375,6 @@
             </table>
         </div>
         <!--fin ogm-tabla8 -->
-        <div class="col-md-12">
-            <h3>Gastos de funcionamiento</h3>
-            <h4>Municipio de {{ municipio}} y Categoría del Municipio {{ year }}</h4>
-            <h4 class="text-info">Millones de córdobas corrientes</h4>
-            <div id='comparativo_anios' class="col-md-10"></div>
-        </div>
-        <hr />
-        <div class="col-md-12">
-            <h3>Gastos del municipio vs Promedio de la categor&iacute;a</h3>
-        </div>
-        <div id='asignado_barra' class=""> Chart will be rendered here </div>
       </div>
     </div>
 </div>
