--- a/core/templates/funcionamiento.html
+++ b/core/templates/funcionamiento.html
@@ -144,6 +144,7 @@
 
     <div class="col-md-7">
     <!-- javier 7/junio gftabla2 -->
+    {% descargar_excel "gf1" %}
     <h3>Resultado presupuestario gastos de funcionamiento</h3>
     <h4 class="text-info">Millones de córdobas corrientes</h4>
     <table class="table table-condensed">
@@ -181,6 +182,7 @@
     <div role="tabpanel" class="tab-pane fade" id="gfmodificacion" aria-labelledby="gfmodificacion-tab">
 
     <!-- javier 7/junio gftabla3 -->
+    {% descargar_excel "gf2" %}
     <h3>Modificaciones al presupuesto municipal</h3>
     <h4 class="text-info">Millones de córdobas</h4>
     <table class="table table-condensed">
@@ -225,6 +227,7 @@
     
     {% if not municipio %}
     <!-- javier 7/junio gftabla4 nacional -->
+    {% descargar_excel "gf3" %}
     <h3>Modificaciones al presupuesto municipal por categoría</h3>
     <h4 class="text-info">Millones de córdobas</h4>
     <table  class="table table-condensed">
@@ -269,6 +272,7 @@
     {% else %}
     
     <!-- javier 7/junio gftabla4 -->
+    {% descargar_excel "gf4" %}
     <h3>Modificación al presupuesto municipios categoría '{{ mi_clase.clasificacion }}'</h3>
     <h4 class="text-info">Millones de córdobas destinado a gastos de funcionamiento por categoría de Municipios</h4>
     <table  class="table table-condensed">
@@ -323,6 +327,7 @@
     <div role="tabpanel" class="tab-pane fade" id="gforigen" aria-labelledby="gforigen-tab">
     <!-- javier 7/junio gftabla5 -->
     <div class="col-md-7">
+    	{% descargar_excel "gf5" %}
         <h3>Ejecución presupuestaria del gasto de funcionamiento</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
     <table class="table table-condensed">
