finalizada descarga gpersonal

--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -145,6 +145,7 @@
 
     <div class="col-md-7">
     <!-- javier 7/junio gftabla2 -->
+    {% descargar_excel "gp1" %}
     <h3>Resultado presupuestario gastos de personal</h3>
     <h4 class="text-info">Millones de córdobas corrientes</h4>
     <table class="table table-condensed">
@@ -188,6 +189,7 @@
     <div role="tabpanel" class="tab-pane fade" id="modificacion" aria-labelledby="modificacion-tab">
 
     <!-- javier 7/junio gftabla3 -->
+    {% descargar_excel "gp2" %}
     <h3>Modificaciones al presupuesto municipal</h3>
     <h4 class="text-info">Gasto de personal - millones de córdobas</h4>
     <table class="table table-condensed">
@@ -232,6 +234,7 @@
     
     {% if not municipio %}
     <!-- javier 7/junio gftabla4 nacional -->
+    {% descargar_excel "gp3" %}
     <h3>Modificaciones al presupuesto municipal por categoría</h3>
     <h4 class="text-info">Millones de córdobas</h4>
     <table  class="table table-condensed">
@@ -276,6 +279,7 @@
     {% else %}
     
     <!-- javier 7/junio gftabla4 -->
+    {% descargar_excel "gp4" %}
     <h3>Modificación al presupuesto municipios categoría '{{ mi_clase.clasificacion }}'</h3>
     <h4 class="text-info">Millones de córdobas destinado a gastos de funcionamiento por categoría de Municipios</h4>
     <table  class="table table-condensed">
@@ -330,7 +334,8 @@
     <div role="tabpanel" class="tab-pane fade" id="cierre" aria-labelledby="cierre-tab">
     <!-- javier 7/junio gftabla5 -->
     <div class="col-md-7">
-        <h3>Ejecución presupuestaria del gasto de funcionamiento</h3>
+    	{% descargar_excel "gp5" %}
+        <h3>Ejecución presupuestaria del gasto de personal</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
     <table class="table table-condensed">
         <tr class="info"><th>Municipio</th> <th>Inicial</th> <th>Ejecutado</th> <th>% Ejecutado/Inicial</th></tr>
