creando configuracion tabla

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md-6">
             <!-- maribel 21/07 tabla2 inversion -->
-			{% descargar_excel "ogm" %}           
+			{% descargar_excel "ogm1" %}           
             <h3>Eficiencia en la ejecución del gasto municipal</h3>
             <h4>Gastos en millones de córdobas corrientes
               <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseeficiencia"  aria-expanded="false" aria-controls="collapseEficiencia">Ver gráfico </a>
