--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -5,6 +5,7 @@
 {% block main_content %}
     <div class="col-md-12 text-centered">
         <div class="pull-left">
+        	{% descargar_excel "gp-all" %}
             <h2 class="title">Gastos de personal {{ municipio }} {{ year }} </h2>
         </div>
         <div class="pull-left">
